--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,16 @@ jobs:
             zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo6 \
             cmake libffi-dev libssl-dev
 
+      - name: Cache buildozer (optional)
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.buildozer
+            .buildozer
+          key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
+          restore-keys: |
+            ${{ runner.os }}-buildozer-
+
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
@@ -32,7 +42,7 @@ jobs:
 
       - name: Build APK (debug)
         run: |
-          buildozer -v android debug
+          yes | buildozer -v android debug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
